hphp/test/zend/good/ext/gd/tests/colorresolve.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!function_exists('imagecolorresolve')) die("skip gd extension not available\n");
}
