hphp/test/zend/bad/ext/pcntl/tests/pcntl_alarm.php.skipif
<?php if (!function_exists("pcntl_sigtimedwait")) die("skip pcntl_sigtimedwait() not available"); ?>